deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-info-deployment
  namespace: dev-namespace
  labels:
    app: pod-info
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-info
  template:
    metadata:
      labels:
        app: pod-info
    spec:
      containers:
        - name: pod-info-container
          image: kimschles/pod-info-app:latest
          ports:
            - containerPort: 3000
