quote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quote-service
  namespace: dev-namespace
  labels:
    app: quote-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quote-service
  template:
    metadata:
      labels:
        app: quote-service
    spec:
      containers:
        - name: quote-container
          image: datawire/quote:0.5.0
          ports:
            - containerPort: 8080
