service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: dev-namespace
spec:
  selector:
    app: pod-info
  ports:
    - port: 80
      targetPort: 3000
  type: LoadBalancer
