ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: rustwebserver-ingress

spec:
  defaultBackend:
    service:
      name: rustwebserver-service

      port:
        number: 9900
